# car_ws

src/car_master/: CMakeLists.txt  package.xml
src/car_master/include/: car_controller.hpp  multi_traj.hpp  traj.hpp
src/car_master/launch/: test.launch  test.rviz
src/car_master/src/: car_controller.cpp  car_master.cpp  multi_traj.cpp  test.cpp  traj.cpp
src/minimumsnap/: CMakeLists.txt  package.xml
src/minimumsnap/launch/: minimumsnap.launch  test.rviz
src/minimumsnap/msg/: PolynomialTrajectory.msg
src/minimumsnap/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
src/multi_car/: CMakeLists.txt  package.xml
src/multi_car/config/: car_param.cfg  car_param.yaml
src/multi_car/include/: car_controller.hpp  car_node.hpp  diff_mpc_controller.hpp  diff_mpc_node.hpp  multi_traj.hpp  multi_traj_node.hpp  serial_send.hpp
src/multi_car/launch/: control.launch  keyboard.launch  mpcc.rviz  planning.launch  real.launch  test.launch  test.rviz
src/multi_car/msg/: ContorlRef.msg
src/multi_car/scripts/: ArcTrajectory.py  MPC.py  MPCC.py  MPCC_gazebo.py  MPCC_real.py  PolynomialTrajectory.py  lengths_car0.npy  lengths_car1.npy  mpc_car_circle.py  mytest_acados_ocp.json  p.npy  param_car0.npy  param_car1.npy  points_car0.npy  points_car1.npy  test.py
src/multi_car/scripts/c_generated_code/car0_Arcsolver_0/: Makefile  acados_sim_solver_car0_Arcsolver_0.c  acados_sim_solver_car0_Arcsolver_0.h  acados_solver.pxd  acados_solver_car0_Arcsolver_0.c  acados_solver_car0_Arcsolver_0.h  main_car0_Arcsolver_0.c  main_sim_car0_Arcsolver_0.c
src/multi_car/scripts/c_generated_code/car0_Arcsolver_1/: Makefile  acados_sim_solver_car0_Arcsolver_1.c  acados_sim_solver_car0_Arcsolver_1.h  acados_solver.pxd  acados_solver_car0_Arcsolver_1.c  acados_solver_car0_Arcsolver_1.h  main_car0_Arcsolver_1.c  main_sim_car0_Arcsolver_1.c
src/multi_car/scripts/c_generated_code/car0_len_integrate_0/: Makefile  acados_sim_solver.pxd  acados_sim_solver_car0_len_integrate_0.c  acados_sim_solver_car0_len_integrate_0.h  main_sim_car0_len_integrate_0.c
src/multi_car/scripts/c_generated_code/car0_len_integrate_1/: Makefile  acados_sim_solver.pxd  acados_sim_solver_car0_len_integrate_1.c  acados_sim_solver_car0_len_integrate_1.h  main_sim_car0_len_integrate_1.c
src/multi_car/scripts/c_generated_code/car1_Arcsolver_0/: Makefile  acados_sim_solver_car1_Arcsolver_0.c  acados_sim_solver_car1_Arcsolver_0.h  acados_solver.pxd  acados_solver_car1_Arcsolver_0.c  acados_solver_car1_Arcsolver_0.h  main_car1_Arcsolver_0.c  main_sim_car1_Arcsolver_0.c
src/multi_car/scripts/c_generated_code/car1_Arcsolver_1/: Makefile  acados_sim_solver_car1_Arcsolver_1.c  acados_sim_solver_car1_Arcsolver_1.h  acados_solver.pxd  acados_solver_car1_Arcsolver_1.c  acados_solver_car1_Arcsolver_1.h  main_car1_Arcsolver_1.c  main_sim_car1_Arcsolver_1.c
src/multi_car/scripts/c_generated_code/car1_len_integrate_0/: Makefile  acados_sim_solver.pxd  acados_sim_solver_car1_len_integrate_0.c  acados_sim_solver_car1_len_integrate_0.h  main_sim_car1_len_integrate_0.c
src/multi_car/scripts/c_generated_code/car1_len_integrate_1/: Makefile  acados_sim_solver.pxd  acados_sim_solver_car1_len_integrate_1.c  acados_sim_solver_car1_len_integrate_1.h  main_sim_car1_len_integrate_1.c
src/multi_car/scripts/c_generated_code/circle_car/: Makefile  acados_sim_solver_circle_car.c  acados_sim_solver_circle_car.h  acados_solver.pxd  acados_solver_circle_car.c  acados_solver_circle_car.h  main_circle_car.c  main_sim_circle_car.c
src/multi_car/scripts/c_generated_code/circle_car_mpc/: Makefile  acados_sim_solver_circle_car_mpc.c  acados_sim_solver_circle_car_mpc.h  acados_solver.pxd  acados_solver_circle_car_mpc.c  acados_solver_circle_car_mpc.h  main_circle_car_mpc.c  main_sim_circle_car_mpc.c
src/multi_car/scripts/c_generated_code/diff_car_controller/: Makefile  acados_sim_solver_diff_car_controller.c  acados_sim_solver_diff_car_controller.h  acados_solver.pxd  acados_solver_diff_car_controller.c  acados_solver_diff_car_controller.h  main_diff_car_controller.c  main_sim_diff_car_controller.c
src/multi_car/scripts/c_generated_code/multi_car/: Makefile  acados_sim_solver_multi_car.c  acados_sim_solver_multi_car.h  acados_solver.pxd  acados_solver_multi_car.c  acados_solver_multi_car.h  main_multi_car.c  main_sim_multi_car.c
src/multi_car/scripts/c_generated_code/ocp_multi_car/: Makefile  acados_sim_solver_multi_car.c  acados_sim_solver_multi_car.h  acados_solver.pxd  acados_solver_multi_car.c  main_multi_car.c  (+2 more)
src/multi_car/scripts/json_files/: car0_Arcsolver_0_acados_ocp.json  car0_Arcsolver_1_acados_ocp.json  car0_len_integrate_0_acados_ocp.json  car0_len_integrate_1_acados_ocp.json  car1_Arcsolver_0_acados_ocp.json  car1_Arcsolver_1_acados_ocp.json  car1_len_integrate_0_acados_ocp.json  car1_len_integrate_1_acados_ocp.json  circle_car_acados_ocp.json  circle_car_mpc_acados_ocp.json  diff_car_controller_acados_ocp.json  multi_car_acados_ocp.json  ocp_multi_car_acados_ocp.json  sim_multi_car_acados_ocp.json  trax_car0_acados_ocp.json  trax_car1_acados_ocp.json  tray_car0_acados_ocp.json  tray_car1_acados_ocp.json  traz_car0_acados_ocp.json  traz_car1_acados_ocp.json
src/multi_car/src/: car_controller.cpp  car_master.cpp  car_node.cpp  diff_mpc_controller.cpp  diff_mpc_node.cpp  multi_traj.cpp  multi_traj_node.cpp  serial_send.cpp  sim2real_msg.cpp  traj.cpp
(+258 files in other folders)
